--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,19 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_loading">Loading</string>
+
+    <string name="hello_world">Hello world!</string>
+
+
+    <!-- Time -->
+    <string name="just_now">Just now</string>
+    <string name="min">&#160;minutes ago</string>
+    <string name="hour">&#160;hours ago</string>
+    <string name="day">&#160;days ago</string>
+    <string name="month">&#160;months ago</string>
+    <string name="year">&#160;year ago</string>
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="the_day_before_yesterday">2 days ago</string>
 </resources>
