--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
+  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
+  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
+  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
+  -->
+
 <resources>
 
     <string name="app_name">biu</string>
@@ -46,20 +54,21 @@
 
 
     <!-- Statuses -->
-    <string name="timeline">Timeline</string>
-    <string name="attitudes">Like</string>
-    <string name="retweet">Repost</string>
-    <string name="comment">Comment</string>
-    <string name="status_mention_me">Weibos that mentioned me</string>
-    <string name="comment_mention_me">Comments that mentioned me</string>
+    <string name="timeline">时间线</string>
+    <string name="attitudes">赞</string>
+    <string name="retweet">转发</string>
+    <string name="comment">评论</string>
+    <string name="status_mention_me">提到我的微博</string>
+    <string name="comment_mention_me">提到我的评论</string>
     <string name="loading_more">Loading more……</string>
-    <string name="new_post">Post a new weibo</string>
-    <string name="comment_on">Make a comment</string>
-    <string name="repost">Repost weibo</string>
-    <string name="reply_to">Reply to the comment</string>
-    <string name="reply">Reply</string>
-    <string name="remove_attitude">Unlike</string>
-    <string name="repost_and_comment">Also make a comment</string>
+    <string name="new_post">发微博</string>
+    <string name="comment_on">评论微博</string>
+    <string name="repost">转发</string>
+    <string name="repost_weibo">转发微博</string>
+    <string name="reply_to">回复评论</string>
+    <string name="reply">回复</string>
+    <string name="remove_attitude">取消赞</string>
+    <string name="repost_and_comment">同时评论</string>
     <string name="repost_and_comment_the_original">Also comment on the origin weibo</string>
     <string name="comment_and_repost">Also make a repost</string>
     <string name="comment_orig">Also comment on the origin weibo</string>
