--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -60,6 +60,7 @@
     <string name="comment">评论</string>
     <string name="status_mention_me">提到我的微博</string>
     <string name="comment_mention_me">提到我的评论</string>
+    <string name="mention_me">提到我的</string>
     <string name="loading_more">Loading more……</string>
     <string name="new_post">发微博</string>
     <string name="comment_on">评论微博</string>
