--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="comment">Comment</string>
     <string name="status_mention_me">Weibos that mentioned me</string>
     <string name="comment_mention_me">Comments that mentioned me</string>
+    <string name="mention_me">提到我的</string>
     <string name="loading_more">Loading more……</string>
     <string name="new_post">Post a new weibo</string>
     <string name="comment_on">Make a comment</string>
