add group message and import okhttp library
add group message and import okhttp library

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -86,6 +86,7 @@
     <string name="comment_delete">Delete comment</string>
     <string name="comment_view_orig">View origin weibo</string>
     <string name="refresh">Refresh</string>
+    <string name="group">分组</string>
     <string-array name="picture_picker_array">
         <item>Choose picture(s) from Photo Gallery</item>
         <item>Take picture(s)</item>
