--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="comment_delete">Delete comment</string>
     <string name="comment_view_orig">View origin weibo</string>
     <string name="refresh">Refresh</string>
+    <string name="group">Groups</string>
     <string-array name="picture_picker_array">
         <item>Choose picture(s) from Photo Gallery</item>
         <item>Take picture(s)</item>
