--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -96,7 +96,8 @@
 
     <string name="loading_finish">已加载完</string>
     <string name="loading_fail">加载失败 </string>
-
+    <string name="groups_all">全部</string>
+    <string name="groups_bilateral">相互关注</string>
 
 
 
