--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,7 +86,8 @@
 
     <string name="loading_finish">已加载完</string>
     <string name="loading_fail">加载失败 </string>
-
+    <string name="groups_all">All</string>
+    <string name="groups_bilateral">Bilateral</string>
 
 
 
