--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -25,6 +25,9 @@
 
     <string name="success">成功</string>
     <string name="fail">失败</string>
+
+    <string name="ten_thousand">万</string>
+
     <!-- Login -->
     <string name="login">登录</string>
     <string name="tail">尾巴</string>
@@ -95,10 +98,14 @@
     <string name="follow_user_comfire">确定关注他？</string>
     <string name="unfollow_user_comfire">确定取消对他的关注？</string>
 
+    <string name="following">关注</string>
+    <string name="followers">粉丝</string>
 
+    <string name="male">男</string>
 
+    <string name="female">女</string>
     <!-- Units -->
-    <string name="ten_thousand">null</string>
+
     <string name="million">M</string>
     <string name="hundred_million">null</string>
     <string name="billion">B</string>
