--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,6 @@
     <string name="the_day_before_yesterday">2天前</string>
     <string name="title_activity_friend">好友</string>
     <string name="title_weibo_detail">微博正文</string>
+    <string name="title_activity_setting">设置</string>
+
 </resources>
