--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="expires_in">授权%d天有效</string>
     <string name="login_fail">登录失败</string>
 
+    <string name="log_out">退出登录</string>
+
 
     <!-- Statuses -->
     <string name="timeline">时间线</string>
@@ -130,5 +132,15 @@
     <string name="title_activity_friend">好友</string>
     <string name="title_weibo_detail">微博正文</string>
     <string name="title_activity_setting">设置</string>
+    <string name="setting_about">关于</string>
+
+    <string name="base_setting">基础设置</string>
+    <string name="setting_help">帮助</string>
+    <string name="authour">作者：萧大虾</string>
+    <string name="authour_email">我的邮箱：shawwin86@gmail.com</string>
+
+
+    <string name="setting_rate">评分</string>
+    <string name="setting_rate_hint">若你觉得Biu很赞的话，麻烦点击此处到应用商店给个好评，非常感谢"</string>
 
 </resources>
